[workspace]
resolver = "2"
members = [
    "pgsleuth-ebpf",
    "pgsleuth-ebpf-common",
    "pgsleuth-ebpf-loader",
    "pgsleuth-pg-ext",
    "xtask",
]
# eBPF kernel crate and the Postgres extension crate both have build
# requirements (bpfel target / pgrx + postgresql-server-dev-17) that the
# host toolchain does not satisfy. They are excluded from
# `default-members` so plain `cargo check` / `cargo build` from the
# workspace root only touches the userspace Rust crates.
default-members = [
    "pgsleuth-ebpf-common",
    "pgsleuth-ebpf-loader",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TarqWork/pgsleuth-ebpf-poc"

[profile.release]
lto = true
codegen-units = 1
