[package]
name = "pgsleuth-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Kernel-side eBPF program. Built for the `bpfel-unknown-none`
# target inside the rust-dev container; never compiled on the host.

[[bin]]
name = "pgsleuth-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

pgsleuth-ebpf-common = { path = "../pgsleuth-ebpf-common", default-features = false }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
