[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Build orchestrator. Invoked inside the rust-dev container via
# `cargo xtask build-ebpf` to produce the kernel-side BPF object.

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
